Enhance type checking using instanceof pattern matching
Replaced traditional instanceof checks with pattern matching in multiple classes to streamline and modernize type checks. Also updated the GitHub Actions workflow to use JDK 17 instead of JDK 11. These changes improve the readability and efficiency of the codebase.